Fix the '.permissions-list' table height to fit on mobile

--- a/src/styles/popup/media.less
+++ b/src/styles/popup/media.less
@@ -36,5 +36,11 @@
         div.passphrase {
             padding: 20px 30px;
         }
+
+        div.permissions {
+            .permissions-list {
+                max-height: 161px !important;
+            }
+        }
     }
 }
